--- a/coding.html
+++ b/coding.html
@@ -20,11 +20,11 @@
                 <div class="collapse navbar-collapse"
                     id="navcol-1">
                     <ul class="nav navbar-nav ml-auto">
-                        <li class="nav-item" role="presentation"><a class="nav-link active" href="#">Home</a></li>
+                        <li class="nav-item" role="presentation"><a class="nav-link" href="#">Home</a></li>
                         <li class="nav-item" role="presentation"><a class="nav-link" href="#">About</a></li>
                         <li class="nav-item" role="presentation"><a class="nav-link" href="contact.html">Contact</a></li>
                         <li class="dropdown"><a class="dropdown-toggle nav-link dropdown-toggle" data-toggle="dropdown" aria-expanded="false" href="#">Portfolio</a>
-                            <div class="dropdown-menu" role="menu"><a class="dropdown-item" role="presentation" href="3d.html">3D</a><a class="dropdown-item" role="presentation" href="coding.html">Coding</a><a class="dropdown-item" role="presentation" href="#">IOT</a><a class="dropdown-item"
+                            <div class="dropdown-menu" role="menu"><a class="dropdown-item" role="presentation" href="3d.html">3D</a><a class="dropdown-item disabled" role="presentation" href="coding.html">Coding</a><a class="dropdown-item" role="presentation" href="#">IOT</a><a class="dropdown-item"
                                     role="presentation" href="#">Web</a></div>
                         </li>
                     </ul>
@@ -37,25 +37,8 @@
         <div class="container">
             <div class="row">
                 <div class="col">
-                    <h2>Little about me</h2>
-                    <p>I'm just a student trying to build my bridge to the future.</p>
-                    <p>What am I? Student, Tech Enthusiast, Programmer, Developer, Problem Solver, Hard Worker, Designer, Gamer and many other things! Whta are my iterests? Tech, Developement, Entrepreneurship, IOT, Design and 3D printing/modeling.</p>
-                </div>
-            </div>
-            <div class="row" style="margin-top:20px;">
-                <div class="col-md-6"><img class="rounded" src="assets/img/arduino-1128227_1920.jpg" width="100%"></div>
-                <div class="col-md-6">
-                    <h2 style="margin-top:12px;">What do I do?</h2>
-                    <p>I know many thing and people ask me for many projects. I mainly do the one's that I'm most interested in and have the time for. More about my personal projects in my portfolio.</p>
-                    <p>The things I mostly like to do are: IOT, software development and Python coding.&nbsp;</p>
-                </div>
-            </div>
-            <div class="row" style="margin-top:20px;">
-                <div class="col-md-6"><img class="rounded" src="assets/img/place-name-sign-1647341_1920.jpg" width="100%"></div>
-                <div class="col-md-6">
-                    <h2 style="margin-top:12px;">Education</h2>
-                    <p>I'm on my second year at Pohjois-Tapiola Upper Secondary school. But most of the things I have learned my self trough internet, trying, failing and succeeding.<br></p>
-                    <p>I'm always trying to learn the new big things.&nbsp;</p>
+                    <h2>Coding</h2>
+                    <p>Nothing here yet but some of my codes can be found on <a href="https://github.com/JussiRoos">GitHub</a>.</p>
                 </div>
             </div>
         </div>
