--- a/contact.html
+++ b/contact.html
@@ -24,38 +24,36 @@
                         <li class="nav-item" role="presentation"><a class="nav-link" href="#">About</a></li>
                         <li class="nav-item" role="presentation"><a class="nav-link active" href="contact.html">Contact</a></li>
                         <li class="dropdown"><a class="dropdown-toggle nav-link dropdown-toggle" data-toggle="dropdown" aria-expanded="false" href="#">Portfolio</a>
-                            <div class="dropdown-menu" role="menu"><a class="dropdown-item" role="presentation" href="#">3D</a><a class="dropdown-item" role="presentation" href="#">Coding</a><a class="dropdown-item" role="presentation" href="#">IOT</a><a class="dropdown-item" role="presentation"
-                                    href="#">Web</a></div>
+                            <div class="dropdown-menu" role="menu"><a class="dropdown-item" role="presentation" href="3d.html">3D</a><a class="dropdown-item" role="presentation" href="coding.html">Coding</a><a class="dropdown-item" role="presentation" href="#">IOT</a><a class="dropdown-item"
+                                    role="presentation" href="#">Web</a></div>
                         </li>
                     </ul>
                 </div>
             </div>
         </nav>
     </div>
-    <div data-bs-parallax-bg="true" style="height:500px;background-image:url(assets/img/architecture-3121009.jpg);background-position:center;background-size:cover;"></div>
+    <div data-bs-parallax-bg="true" style="height:500px;background-image:url(assets/img/architecture-3121009_1920.jpg);background-position:center;background-size:cover;"></div>
     <div></div>
     <div style="margin-top:60px;">
         <div class="container">
             <div class="row">
                 <div class="col-md-6"><img class="rounded-circle" src="assets/img/Jussi square.jpg" style="width:100%;"></div>
                 <div class="col-md-6">
-                    <h1 style="margin-bottom:18px;margin-top:18px;">Contact</h1><a href="mailto:jussi.roos@gmail.com" style="font-size:22px;margin-top:0px;"><i class="icon ion-android-mail" style="font-size:24px;margin:8px;"></i>linkedin.com/in/JussiRoos/<br><br></a><a href="https://www.linkedin.com/in/JussiRoos/"
+                    <h1 style="margin-bottom:18px;margin-top:18px;">Contact</h1><a href="mailto:me@jussiroos.com" style="font-size:22px;margin-top:0px;"><i class="icon ion-android-mail" style="font-size:24px;margin:8px;"></i>me@jussiroos.com<br><br></a><a href="https://www.linkedin.com/in/JussiRoos/"
                         target="_blank" style="font-size:22px;"><i class="icon ion-social-linkedin-outline" style="font-size:24px;margin:8px;"></i>linkedin.com/in/JussiRoos/<br><br></a><a href="https://github.com/JussiRoos" target="_blank" style="font-size:22px;"><i class="icon ion-social-github" style="font-size:24px;margin:8px;"></i>github.com/JussiRoos<br><br></a></div>
             </div>
         </div>
     </div>
     <div class="footer-basic">
         <footer>
-            <div class="social"><a href="mailto:jussi.roos@gmail.com"><i class="icon ion-android-mail"></i></a><a href="https://www.linkedin.com/in/JussiRoos" target="_blank"><i class="icon ion-social-linkedin"></i></a><a href="https://twitter.com/JussiRoos" target="_blank"><i class="icon ion-social-twitter"></i></a>
-                <a
-                    href="https://github.com/JussiRoos" target="_blank"><i class="icon ion-social-github"></i></a>
-            </div>
-            <ul class="list-inline">
+            <div class="social"><a href="mailto:jussi.roos@gmail.com"><i class="icon ion-android-mail"></i></a><a href="https://www.linkedin.com/in/JussiRoos" target="_blank"><i class="icon ion-social-linkedin"></i></a><a href="https://github.com/JussiRoos" target="_blank"><i class="icon ion-social-github"></i></a></div>
+            <ul
+                class="list-inline">
                 <li class="list-inline-item"><a href="#">Home</a></li>
                 <li class="list-inline-item"><a href="#">About</a></li>
                 <li class="list-inline-item"><a href="#">Contact</a></li>
-            </ul>
-            <p class="copyright">Jussi Roos© 2017</p>
+                </ul>
+                <p class="copyright">Jussi Roos © 2017</p>
         </footer>
     </div>
     <script src="assets/js/jquery.min.js"></script>
