--- a/index.html
+++ b/index.html
@@ -39,14 +39,17 @@
                 <div class="col">
                     <h2>Little about me</h2>
                     <p>I'm just a student trying to build my bridge to the future.</p>
-                    <p>What am I? Student, Tech Enthusiast, Programmer, Developer, Problem Solver, Hard Worker, Designer, Gamer and many other things! Whta are my iterests? Tech, Developement, Entrepreneurship, IOT, Design and 3D printing/modeling.</p>
+                    <p style="margin-bottom:0px;">What am I?</p>
+                    <p>Student, Tech Enthusiast, Programmer, Developer, Problem Solver, Hard Worker, Designer, Gamer and many other things!&nbsp;<br></p>
+                    <p style="margin-bottom:0px;">What are my iterests?<br></p>
+                    <p>Tech, Developement, Entrepreneurship, IOT, Design and 3D printing/modeling.<br></p>
                 </div>
             </div>
             <div class="row" style="margin-top:20px;">
                 <div class="col-md-6"><img class="rounded" src="assets/img/arduino-1128227_1920.jpg" width="100%"></div>
                 <div class="col-md-6">
                     <h2 style="margin-top:12px;">What do I do?</h2>
-                    <p>I know many thing and people ask me for many projects. I mainly do the one's that I'm most interested in and have the time for. More about my personal projects in my portfolio.</p>
+                    <p>I know manys things and people ask me for many projects. I mainly do the one's that I'm most interested in and have the time for. More about my personal projects in my portfolio.</p>
                     <p>The things I mostly like to do are: IOT, software development and Python coding.&nbsp;</p>
                 </div>
             </div>
