--- a/3d.html
+++ b/3d.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
     <link rel="stylesheet" href="assets/fonts/ionicons.min.css">
+    <link rel="stylesheet" href="assets/css/Contact-Form-Clean.css">
     <link rel="stylesheet" href="assets/css/Footer-Basic.css">
     <link rel="stylesheet" href="assets/css/Navigation-Clean.css">
     <link rel="stylesheet" href="assets/css/styles.css">
@@ -21,7 +22,6 @@
                     id="navcol-1">
                     <ul class="nav navbar-nav ml-auto">
                         <li class="nav-item" role="presentation"><a class="nav-link" href="index.html">Home</a></li>
-                        <li class="nav-item" role="presentation"><a class="nav-link" href="#">About</a></li>
                         <li class="nav-item" role="presentation"><a class="nav-link" href="contact.html">Contact</a></li>
                         <li class="dropdown"><a class="dropdown-toggle nav-link dropdown-toggle" data-toggle="dropdown" aria-expanded="false" href="#">Portfolio</a>
                             <div class="dropdown-menu" role="menu"><a class="dropdown-item disabled" role="presentation" href="3d.html">3D</a><a class="dropdown-item" role="presentation" href="coding.html">Coding</a><a class="dropdown-item" role="presentation" href="#">IOT</a><a class="dropdown-item"
@@ -42,7 +42,7 @@
             </div>
             <div class="row">
                 <div class="col-md-12"><img class="rounded" src="assets/img/Kuvis_työ_2018-Mar-27_03-14-28PM-000_CustomizedView24116574152.png" width="100%">
-                    <p>Scool project</p>
+                    <p>School project</p>
                 </div>
                 <div class="col-md-12"><img class="rounded" src="assets/img/Headphone_hanger_2018-Mar-27_03-21-02PM-000_CustomizedView36239343651_png.png" width="100%">
                     <p>Headphone hanger I designed to fit my table.</p>
