--- a/contact.html
+++ b/contact.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
     <link rel="stylesheet" href="assets/fonts/ionicons.min.css">
+    <link rel="stylesheet" href="assets/css/Contact-Form-Clean.css">
     <link rel="stylesheet" href="assets/css/Footer-Basic.css">
     <link rel="stylesheet" href="assets/css/Navigation-Clean.css">
     <link rel="stylesheet" href="assets/css/styles.css">
@@ -33,8 +34,7 @@
         </nav>
     </div>
     <div data-bs-parallax-bg="true" style="height:500px;background-image:url(assets/img/architecture-3121009_1920.jpg);background-position:center;background-size:cover;"></div>
-    <div></div>
-    <div style="margin-top:60px;">
+    <div style="margin-top:50px;">
         <div class="container">
             <div class="row">
                 <div class="col-md-6"><img class="rounded-circle" src="assets/img/Jussi square.jpg" style="width:100%;"></div>
@@ -43,6 +43,15 @@
                         target="_blank" style="font-size:22px;"><i class="icon ion-social-linkedin-outline" style="font-size:24px;margin:8px;"></i>linkedin.com/in/JussiRoos/<br><br></a><a href="https://github.com/JussiRoos" target="_blank" style="font-size:22px;"><i class="icon ion-social-github" style="font-size:24px;margin:8px;"></i>github.com/JussiRoos<br><br></a></div>
             </div>
         </div>
+    </div>
+    <div class="contact-clean" style="padding-top:40px;">
+        <form action="https://formspree.io/jussi.roos@gmail.com" method="post">
+            <h2 class="text-center">Contact me</h2>
+            <div class="form-group"><input class="form-control" type="text" name="name" placeholder="Name"></div>
+            <div class="form-group"><input class="form-control is-invalid" type="email" name="email" placeholder="Email"><small class="form-text text-danger">Please enter a correct email address.</small></div>
+            <div class="form-group"><textarea class="form-control" rows="14" name="message" placeholder="Message"></textarea></div>
+            <div class="form-group"><button class="btn btn-primary" type="submit">send </button></div>
+        </form>
     </div>
     <div class="footer-basic">
         <footer>
