Updates to Portfolio

--- a/contact.html
+++ b/contact.html
@@ -31,12 +31,8 @@
                     id="navcol-1">
                     <ul class="nav navbar-nav ml-auto">
                         <li class="nav-item" role="presentation"><a class="nav-link" href="index.html">Home</a></li>
-                        <li class="nav-item" role="presentation"><a class="nav-link" href="#">About</a></li>
                         <li class="nav-item" role="presentation"><a class="nav-link active" href="contact.html">Contact</a></li>
-                        <li class="dropdown"><a class="dropdown-toggle nav-link dropdown-toggle" data-toggle="dropdown" aria-expanded="false" href="#">Portfolio</a>
-                            <div class="dropdown-menu" role="menu"><a class="dropdown-item" role="presentation" href="3d.html">3D</a><a class="dropdown-item" role="presentation" href="coding.html">Coding</a><a class="dropdown-item" role="presentation" href="#">IOT</a><a class="dropdown-item"
-                                    role="presentation" href="#">Web</a></div>
-                        </li>
+                        <li class="nav-item" role="presentation"><a class="nav-link" href="portfolio.html">Portfolio<br></a></li>
                     </ul>
                 </div>
             </div>
@@ -55,7 +51,7 @@
     </div>
     <div class="footer-basic">
         <footer>
-            <div class="social"><a href="mailto:jussi.roos@gmail.com"><i class="icon ion-android-mail"></i></a><a href="https://www.linkedin.com/in/JussiRoos" target="_blank"><i class="icon ion-social-linkedin"></i></a><a href="https://github.com/JussiRoos" target="_blank"><i class="icon ion-social-github"></i></a></div>
+            <div class="social"><a href="mailto:me@gmail.com"><i class="icon ion-android-mail"></i></a><a href="https://www.linkedin.com/in/JussiRoos" target="_blank"><i class="icon ion-social-linkedin"></i></a><a href="https://github.com/JussiRoos" target="_blank"><i class="icon ion-social-github"></i></a></div>
             <ul
                 class="list-inline">
                 <li class="list-inline-item"><a href="#">Home</a></li>
