--- a/index.html
+++ b/index.html
@@ -32,10 +32,7 @@
                     <ul class="nav navbar-nav ml-auto">
                         <li class="nav-item" role="presentation"><a class="nav-link active" href="index.html">Home</a></li>
                         <li class="nav-item" role="presentation"><a class="nav-link" href="contact.html">Contact</a></li>
-                        <li class="dropdown"><a class="dropdown-toggle nav-link dropdown-toggle" data-toggle="dropdown" aria-expanded="false" href="#">Portfolio</a>
-                            <div class="dropdown-menu" role="menu"><a class="dropdown-item" role="presentation" href="3d.html">3D</a><a class="dropdown-item" role="presentation" href="coding.html">Coding</a><a class="dropdown-item" role="presentation" href="#">IOT</a><a class="dropdown-item"
-                                    role="presentation" href="#">Web</a></div>
-                        </li>
+                        <li class="nav-item" role="presentation"><a class="nav-link" href="portfolio.html">Portfolio<br></a></li>
                     </ul>
                 </div>
             </div>
