--- a/portfolio.html
+++ b/portfolio.html
@@ -32,10 +32,7 @@
                     <ul class="nav navbar-nav ml-auto">
                         <li class="nav-item" role="presentation"><a class="nav-link" href="index.html">Home</a></li>
                         <li class="nav-item" role="presentation"><a class="nav-link" href="contact.html">Contact</a></li>
-                        <li class="dropdown"><a class="dropdown-toggle nav-link dropdown-toggle" data-toggle="dropdown" aria-expanded="false" href="#">Portfolio</a>
-                            <div class="dropdown-menu" role="menu"><a class="dropdown-item disabled" role="presentation" href="3d.html">3D</a><a class="dropdown-item" role="presentation" href="coding.html">Coding</a><a class="dropdown-item" role="presentation" href="#">IOT</a><a class="dropdown-item"
-                                    role="presentation" href="#">Web</a></div>
-                        </li>
+                        <li class="nav-item" role="presentation"><a class="nav-link active" href="portfolio.html">Portfolio<br></a></li>
                     </ul>
                 </div>
             </div>
@@ -44,18 +41,34 @@
     <div data-bs-parallax-bg="true" style="height:500px;background-image:url(assets/img/architecture-3121009_1920.jpg);background-position:center;background-size:cover;margin-bottom:60px;"></div>
     <div>
         <div class="container">
-            <div class="row">
-                <div class="col-md-12"><img class="rounded" src="assets/img/Demo_2018-Mar-27_03-22-42PM-000_CustomizedView6370713057_png.png" width="100%">
-                    <p>Demo project</p>
+            <div class="row" style="margin-bottom:50px;">
+                <div class="col-md-6 col-img">
+                    <div class="carousel slide col-img" data-ride="carousel" id="carousel-1">
+                        <div class="carousel-inner" role="listbox">
+                            <div class="carousel-item active"><img class="w-100 d-block" src="assets/img/Demo_2018-Mar-27_03-22-42PM-000_CustomizedView6370713057_png.png" alt="Slide Image"></div>
+                            <div class="carousel-item"><img class="w-100 d-block" src="assets/img/Kuvis_työ_2018-Mar-27_03-14-28PM-000_CustomizedView24116574152.png" alt="Slide Image"></div>
+                            <div class="carousel-item"><img class="w-100 d-block" src="assets/img/Headphone_hanger_2018-Mar-27_03-21-02PM-000_CustomizedView36239343651_png.png" alt="Slide Image"></div>
+                        </div>
+                        <div><a class="carousel-control-prev" href="#carousel-1" role="button" data-slide="prev"><span class="carousel-control-prev-icon"></span><span class="sr-only">Previous</span></a><a class="carousel-control-next" href="#carousel-1" role="button"
+                                data-slide="next"><span class="carousel-control-next-icon"></span><span class="sr-only">Next</span></a></div>
+                        <ol class="carousel-indicators">
+                            <li data-target="#carousel-1" data-slide-to="0" class="active"></li>
+                            <li data-target="#carousel-1" data-slide-to="1"></li>
+                            <li data-target="#carousel-1" data-slide-to="2"></li>
+                        </ol>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <h1>3D Modeling</h1>
+                    <p>3D model made by me. For 3D printing and testing purpouses.</p>
                 </div>
             </div>
-            <div class="row">
-                <div class="col-md-12"><img class="rounded" src="assets/img/Kuvis_työ_2018-Mar-27_03-14-28PM-000_CustomizedView24116574152.png" width="100%">
-                    <p>School project</p>
+            <div class="row d-flex row_text_left">
+                <div class="col-md-6">
+                    <h1>IOT</h1>
+                    <p>I have done many IOT and similar types of projects. Problem is I have never really documented them, but learn from your mistakes.</p>
                 </div>
-                <div class="col-md-12"><img class="rounded" src="assets/img/Headphone_hanger_2018-Mar-27_03-21-02PM-000_CustomizedView36239343651_png.png" width="100%">
-                    <p>Headphone hanger I designed to fit my table.</p>
-                </div>
+                <div class="col-md-6 col-img"><img src="assets/img/Sd+Temp sensor_bb2.png" width="100%"></div>
             </div>
         </div>
     </div>
