Updates and added Favicon

--- a/portfolio.html
+++ b/portfolio.html
@@ -12,6 +12,9 @@
     <link rel="stylesheet" href="assets/css/Footer-Basic.css">
     <link rel="stylesheet" href="assets/css/Navigation-Clean.css">
     <link rel="stylesheet" href="assets/css/styles.css">
+<link rel="shortcut icon" href="/assets/img/favicon.ico" type="image/x-icon">
+<link rel="icon" href="/assets/img/favicon.ico" type="image/x-icon">
+
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-116711639-1"></script>
 <script>
@@ -26,13 +29,13 @@
 <body>
     <div>
         <nav class="navbar navbar-light navbar-expand-md navigation-clean">
-            <div class="container"><a class="navbar-brand" href="#">Jussi Roos</a><button class="navbar-toggler" data-toggle="collapse" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+            <div class="container"><a class="navbar-brand" href="index.html">Jussi Roos</a><button class="navbar-toggler" data-toggle="collapse" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse"
                     id="navcol-1">
                     <ul class="nav navbar-nav ml-auto">
                         <li class="nav-item" role="presentation"><a class="nav-link" href="index.html">Home</a></li>
-                        <li class="nav-item" role="presentation"><a class="nav-link" href="contact.html">Contact</a></li>
                         <li class="nav-item" role="presentation"><a class="nav-link active" href="portfolio.html">Portfolio<br></a></li>
+                        <li class="nav-item" role="presentation"><a class="nav-link" href="contact.html">Contact</a></li>
                     </ul>
                 </div>
             </div>
@@ -41,7 +44,7 @@
     <div data-bs-parallax-bg="true" style="height:500px;background-image:url(assets/img/architecture-3121009_1920.jpg);background-position:center;background-size:cover;margin-bottom:60px;"></div>
     <div>
         <div class="container">
-            <div class="row" style="margin-bottom:50px;">
+            <div class="row" style="margin-bottom:30px;">
                 <div class="col-md-6 col-img">
                     <div class="carousel slide col-img" data-ride="carousel" id="carousel-1">
                         <div class="carousel-inner" role="listbox">
@@ -60,25 +63,35 @@
                 </div>
                 <div class="col-md-6">
                     <h1>3D Modeling</h1>
-                    <p>3D model made by me. For 3D printing and testing purpouses.</p>
+                    <p>I love making 3D models and also printing them out with my 3D printer. I always try to concentrate on the 3D printing aspect of the model and make my 3D model simple, so it can be printed out easily while still maintaining the design
+                        aspect as well.<br></p>
                 </div>
             </div>
-            <div class="row d-flex row_text_left">
+            <hr>
+            <div class="row d-flex row_text_left" style="margin-bottom:30px;border-bottom:1px black;margin-top:30px;">
                 <div class="col-md-6">
                     <h1>IOT</h1>
-                    <p>I have done many IOT and similar types of projects. Problem is I have never really documented them, but learn from your mistakes.</p>
+                    <p>I have done many electronics projects with or without IOT. Many of my projects have included&nbsp;IOT&nbsp;because&nbsp;it is great way to collect and analyze data while improving the actual "thing" and giving it new features.</p>
                 </div>
                 <div class="col-md-6 col-img"><img src="assets/img/Sd+Temp sensor_bb2.png" width="100%"></div>
+            </div>
+            <hr>
+            <div class="row" style="margin-bottom:30px;margin-top:30px;">
+                <div class="col-md-6 col-img"><img src="assets/img/code-1970468.svg" style="width:80%;margin-left:10%;margin-right:10%;"></div>
+                <div class="col-md-6">
+                    <h1>Coding</h1>
+                    <p>I have done some coding. Langueges I use are Python, Arduino and C#. You can find some of my coding projects in my&nbsp;<a href="https://github.com/JussiRoos">GitHub</a>.<br></p>
+                </div>
             </div>
         </div>
     </div>
     <div class="footer-basic">
+        <hr>
         <footer>
             <div class="social"><a href="mailto:me@gmail.com"><i class="icon ion-android-mail"></i></a><a href="https://www.linkedin.com/in/JussiRoos" target="_blank"><i class="icon ion-social-linkedin"></i></a><a href="https://github.com/JussiRoos" target="_blank"><i class="icon ion-social-github"></i></a></div>
             <ul
                 class="list-inline">
                 <li class="list-inline-item"><a href="#">Home</a></li>
-                <li class="list-inline-item"><a href="#">About</a></li>
                 <li class="list-inline-item"><a href="#">Contact</a></li>
                 </ul>
                 <p class="copyright">Jussi Roos © 2017</p>
