--- a/coding.html
+++ b/coding.html
@@ -12,6 +12,9 @@
     <link rel="stylesheet" href="assets/css/Footer-Basic.css">
     <link rel="stylesheet" href="assets/css/Navigation-Clean.css">
     <link rel="stylesheet" href="assets/css/styles.css">
+<link rel="shortcut icon" href="/assets/img/favicon.ico" type="image/x-icon">
+<link rel="icon" href="/assets/img/favicon.ico" type="image/x-icon">
+
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-116711639-1"></script>
 <script>
@@ -26,13 +29,13 @@
 <body>
     <div>
         <nav class="navbar navbar-light navbar-expand-md navigation-clean">
-            <div class="container"><a class="navbar-brand" href="#">Jussi Roos</a><button class="navbar-toggler" data-toggle="collapse" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+            <div class="container"><a class="navbar-brand" href="index.html">Jussi Roos</a><button class="navbar-toggler" data-toggle="collapse" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse"
                     id="navcol-1">
                     <ul class="nav navbar-nav ml-auto">
                         <li class="nav-item" role="presentation"><a class="nav-link" href="index.html">Home</a></li>
-                        <li class="nav-item" role="presentation"><a class="nav-link" href="contact.html">Contact</a></li>
                         <li class="nav-item" role="presentation"><a class="nav-link" href="portfolio.html">Portfolio<br></a></li>
+                        <li class="nav-item" role="presentation"><a class="nav-link" href="contact.html">Contact</a></li>
                     </ul>
                 </div>
             </div>
@@ -50,12 +53,12 @@
         </div>
     </div>
     <div class="footer-basic">
+        <hr>
         <footer>
             <div class="social"><a href="mailto:me@gmail.com"><i class="icon ion-android-mail"></i></a><a href="https://www.linkedin.com/in/JussiRoos" target="_blank"><i class="icon ion-social-linkedin"></i></a><a href="https://github.com/JussiRoos" target="_blank"><i class="icon ion-social-github"></i></a></div>
             <ul
                 class="list-inline">
                 <li class="list-inline-item"><a href="#">Home</a></li>
-                <li class="list-inline-item"><a href="#">About</a></li>
                 <li class="list-inline-item"><a href="#">Contact</a></li>
                 </ul>
                 <p class="copyright">Jussi Roos © 2017</p>
