--- a/portfolio.html
+++ b/portfolio.html
@@ -80,7 +80,7 @@
                 <div class="col-md-6 col-img"><img src="assets/img/code-1970468.svg" style="width:80%;margin-left:10%;margin-right:10%;"></div>
                 <div class="col-md-6">
                     <h1>Coding</h1>
-                    <p>I have done some coding. Langueges I use are Python, Arduino and C#. You can find some of my coding projects in my&nbsp;<a href="https://github.com/JussiRoos">GitHub</a>.<br></p>
+                    <p>I have done some coding. Languages I use are Python, Arduino and C#. You can find some of my coding projects in my&nbsp;<a href="https://github.com/JussiRoos">GitHub</a>.<br></p>
                 </div>
             </div>
         </div>
