--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
     <link rel="stylesheet" href="assets/fonts/ionicons.min.css">
     <link rel="stylesheet" href="assets/css/Contact-Form-Clean.css">
+    <link rel="stylesheet" href="assets/css/divider-text-middle.css">
     <link rel="stylesheet" href="assets/css/Footer-Basic.css">
     <link rel="stylesheet" href="assets/css/Navigation-Clean.css">
     <link rel="stylesheet" href="assets/css/styles.css">
@@ -47,9 +48,8 @@
             <div class="row">
                 <div class="col">
                     <h2>Little about me</h2>
-                    <p>I'm just a student trying to build my bridge to the future.</p>
                     <p style="margin-bottom:0px;">What am I?</p>
-                    <p>Student, Tech Enthusiast, Programmer, Developer, Problem Solver, Hard Worker, Designer, Gamer and many other things!&nbsp;<br></p>
+                    <p>Student, Tech Enthusiast,&nbsp;Developer, Programmer, Problem Solver, Hard Worker, Designer, Gamer and many other things!&nbsp;<br></p>
                     <p style="margin-bottom:0px;">What are my iterests?<br></p>
                     <p>Tech, Developement, Entrepreneurship, IOT, Design and 3D printing/modeling.<br></p>
                 </div>
@@ -58,8 +58,7 @@
                 <div class="col-md-6"><img class="rounded" src="assets/img/arduino-1128227_1920.jpg" width="100%"></div>
                 <div class="col-md-6">
                     <h2 style="margin-top:12px;">What do I do?</h2>
-                    <p>I know manys things and people ask me for many projects. I mainly do the one's that I'm most interested in and have the time for. More about my personal projects in my portfolio.</p>
-                    <p>The things I mostly like to do are: IOT, software development and Python coding.&nbsp;</p>
+                    <p>I know many things and people ask me for many projects. I mainly do the one's that I'm most interested in and have the time for. But I always try to make time for them all. More about my personal projects in my portfolio.</p>
                 </div>
             </div>
             <div class="row" style="margin-top:20px;">
