--- a/portfolio.html
+++ b/portfolio.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
     <link rel="stylesheet" href="assets/fonts/ionicons.min.css">
     <link rel="stylesheet" href="assets/css/Contact-Form-Clean.css">
+    <link rel="stylesheet" href="assets/css/divider-text-middle.css">
     <link rel="stylesheet" href="assets/css/Footer-Basic.css">
     <link rel="stylesheet" href="assets/css/Navigation-Clean.css">
     <link rel="stylesheet" href="assets/css/styles.css">
@@ -41,9 +42,10 @@
             </div>
         </nav>
     </div>
-    <div data-bs-parallax-bg="true" style="height:500px;background-image:url(assets/img/architecture-3121009_1920.jpg);background-position:center;background-size:cover;margin-bottom:60px;"></div>
+    <div data-bs-parallax-bg="true" style="height:500px;background-image:url(assets/img/architecture-3121009_1920.jpg);background-position:center;background-size:cover;margin-bottom:30px;"></div>
     <div>
         <div class="container">
+            <div style="text-align:center;"></div>
             <div class="row" style="margin-bottom:30px;">
                 <div class="col-md-6 col-img">
                     <div class="carousel slide col-img" data-ride="carousel" id="carousel-1">
