Simplified web page
Now it's only the important contact info. More stuff will maybe come back later.

--- a/index.html
+++ b/index.html
@@ -3,89 +3,37 @@
 
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jussi Roos</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+    <title>JR</title>
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
     <link rel="stylesheet" href="assets/fonts/ionicons.min.css">
-    <link rel="stylesheet" href="assets/css/Contact-Form-Clean.css">
-    <link rel="stylesheet" href="assets/css/divider-text-middle.css">
-    <link rel="stylesheet" href="assets/css/Footer-Basic.css">
-    <link rel="stylesheet" href="assets/css/Navigation-Clean.css">
     <link rel="stylesheet" href="assets/css/styles.css">
-<link rel="shortcut icon" href="/assets/img/favicon.ico" type="image/x-icon">
-<link rel="icon" href="/assets/img/favicon.ico" type="image/x-icon">
-
-<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-116711639-1"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'UA-116711639-1');
-</script>
+    <title>Jussi Roos</title>
+    <link rel="shortcut icon" href="/assets/img/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="/assets/img/favicon.ico" type="image/x-icon">
 </head>
 
 <body>
-    <div>
-        <nav class="navbar navbar-light navbar-expand-md navigation-clean">
-            <div class="container"><a class="navbar-brand" href="index.html">Jussi Roos</a><button class="navbar-toggler" data-toggle="collapse" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
-                <div class="collapse navbar-collapse"
-                    id="navcol-1">
-                    <ul class="nav navbar-nav ml-auto">
-                        <li class="nav-item" role="presentation"><a class="nav-link active" href="index.html">Home</a></li>
-                        <li class="nav-item" role="presentation"><a class="nav-link" href="portfolio.html">Portfolio<br></a></li>
-                        <li class="nav-item" role="presentation"><a class="nav-link" href="contact.html">Contact</a></li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
-    </div>
-    <div data-bs-parallax-bg="true" style="height:500px;background-image:url(assets/img/architecture-3121009_1920.jpg);background-position:center;background-size:cover;margin-bottom:60px;"></div>
-    <div>
+    <div style="margin-top: 10%;">
         <div class="container">
-            <div class="row">
-                <div class="col">
-                    <h2>Little about me</h2>
-                    <p style="margin-bottom:0px;">What am I?</p>
-                    <p>Student, Tech Enthusiast,&nbsp;Developer, Programmer, Problem Solver, Hard Worker, Designer, Gamer and many other things!&nbsp;<br></p>
-                    <p style="margin-bottom:0px;">What are my iterests?<br></p>
-                    <p>Tech, Developement, Entrepreneurship, IOT, Design and 3D printing/modeling.<br></p>
-                </div>
-            </div>
-            <div class="row" style="margin-top:20px;">
-                <div class="col-md-6"><img class="rounded" src="assets/img/arduino-1128227_1920.jpg" width="100%"></div>
-                <div class="col-md-6">
-                    <h2 style="margin-top:12px;">What do I do?</h2>
-                    <p>I know many things and people ask me for many projects. I mainly do the one's that I'm most interested in and have the time for. But I always try to make time for them all. More about my personal projects in my portfolio.</p>
-                </div>
-            </div>
-            <div class="row" style="margin-top:20px;">
-                <div class="col-md-6"><img class="rounded" src="assets/img/place-name-sign-1647341_1920.jpg" width="100%"></div>
-                <div class="col-md-6">
-                    <h2 style="margin-top:12px;">Education</h2>
-                    <p>I'm on my second year at Pohjois-Tapiola Upper Secondary school. But most of the things I have learned my self trough internet, trying, failing and succeeding.<br></p>
-                    <p>I'm always trying to learn the new big things.&nbsp;</p>
-                </div>
+            <div class="row d-xl-flex justify-content-xl-center">
+                <div class="col-md-6"><img class="rounded-circle" src="assets/img/Jussi%20square.jpg" style="width: 100%;"></div>
+                <div class="col-md-6 d-xl-flex flex-column justify-content-xl-center">
+                    <h1>Jussi Roos</h1>
+                    <div class="row">
+                        <div class="col"><a href="mailto:me@jussiroos.com"><i class="icon ion-android-mail" style="padding: 6px;"></i>me@jussiroos.com</a></div>
+                    </div>
+                    <div class="row">
+                        <div class="col"><a href="https://www.linkedin.com/in/JussiRoos/"><i class="icon ion-social-linkedin-outline" style="padding: 6px;"></i>linkedin.com/in/JussiRoos/</a></div>
+                    </div>
+                    <div class="row">
+                        <div class="col"><a href="https://github.com/JussiRoos"><i class="icon ion-social-github" style="padding: 6px;"></i>github.com/JussiRoos</a></div>
+                    </div><br></div>
             </div>
         </div>
     </div>
-    <div class="footer-basic">
-        <hr>
-        <footer>
-            <div class="social"><a href="mailto:me@gmail.com"><i class="icon ion-android-mail"></i></a><a href="https://www.linkedin.com/in/JussiRoos" target="_blank"><i class="icon ion-social-linkedin"></i></a><a href="https://github.com/JussiRoos" target="_blank"><i class="icon ion-social-github"></i></a></div>
-            <ul
-                class="list-inline">
-                <li class="list-inline-item"><a href="#">Home</a></li>
-                <li class="list-inline-item"><a href="#">Contact</a></li>
-                </ul>
-                <p class="copyright">Jussi Roos © 2017</p>
-        </footer>
-    </div>
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-    <script src="assets/js/bs-animation.js"></script>
 </body>
 
 </html>
